--- a/src/App.css
+++ b/src/App.css
@@ -1,2 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Poppins:wght@400;500;600;700;800&display=swap');
 @import "tailwindcss";
 @plugin "daisyui";
+
+@theme {
+  --font-poppins: Poppins, sans-serif;
+}
